created header with responsive code

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                             <path d="M0.5 24C0.5 11.0213 11.0213 0.5 24 0.5H416C428.979 0.5 439.5 11.0213 439.5 24C439.5 36.9787 428.979 47.5 416 47.5H24C11.0213 47.5 0.5 36.9787 0.5 24Z" stroke="#9B99AF"/>
                             </svg>
                     </a>
-                    <a href="#"  class="header__left-btns-2">Начать бесплатно</a>
+                    <a href="#" class="header__left-btns-a">
+                        <span>Начать бесплатно</span>
+                    </a>
                 </div>
 
                 <p class="header__left-about">Всегда бесплатно — кредитная карта не нужна</p>
