created main-first section with responsive code

--- a/index.html
+++ b/index.html
@@ -180,6 +180,24 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="main container">
+            <div class="main__left">
+                <h3 class="main__left-title">
+                    Работайте вместе, <br>где бы вы ни <br>находились
+                </h3>
+                <p class="main__left-desc">
+                    Работая в офисе, удалённо или в гибридном формате, с Miro ваша команда может общаться, сотрудничать и совместно заниматься творчеством в одном пространстве, из любой точки мира.
+                </p>
+                <a href="#!">Узнать больше</a>
+            </div>
+           <div class="main__right">
+                <div class="main__right-img">
+                    <img src="./img/main-right.jpg" alt="team-pic">
+                </div>
+            </div>
+        </div>
+    </main>
 
 </body>
 
